--- a/QareebApp/QareebApp.csproj
+++ b/QareebApp/QareebApp.csproj
@@ -10,14 +10,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.7" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.8" />
   </ItemGroup>
-  <ItemGroup>
-    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
-  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="Qareeb.Shared">
-      <HintPath>..\..\Backend\Qareeb.Shared\bin\Debug\net5.0\Qareeb.Shared.dll</HintPath>
+      <HintPath>Qareeb.Shared.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
 </Project>
