--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,9 @@ jobs:
       # changes the base-tag in index.html from '/' to 'QareebApp' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to QareebApp
       run: sed -i 's/<base href="\/" \/>/<base href="\/QareebApp\/" \/>/g' /home/runner/work/QareebApp/QareebApp/deploy/wwwroot/index.html
+          # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+    - name: Add .nojekyll file
+      run: touch  /home/runner/work/QareebApp/QareebApp/deploy/wwwroot/.nojekyll
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
