--- a/QareebApp/QareebApp.csproj
+++ b/QareebApp/QareebApp.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.7" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.8" />
+    <PackageReference Include="MudBlazor" Version="5.1.3" />
   </ItemGroup>
 
   <ItemGroup>
